// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index Choice render renders correctly with default props 1`] = `
<Component
  classes={
    Object {
      "chip": "Component-chip-2",
      "choice": "Component-choice-1",
      "disabled": "Component-disabled-3",
    }
  }
  disabled={false}
  label="Label"
  targetId="1"
  value="1"
/>
`;

exports[`index Choice render renders correctly with disabled prop as true 1`] = `
<Component
  classes={
    Object {
      "chip": "Component-chip-2",
      "choice": "Component-choice-1",
      "disabled": "Component-disabled-3",
    }
  }
  disabled={true}
  label="Label"
  targetId="1"
  value="1"
/>
`;

exports[`index Choices renders correctly with default props 1`] = `
<div>
  <DragSource(WithStyles(Component))
    choice={
      Object {
        "label": "Jumped",
        "value": "Jumped",
      }
    }
    disabled={false}
    key="Jumped-0"
  />
  <DragSource(WithStyles(Component))
    choice={
      Object {
        "label": "Laughed",
        "value": "Laughed",
      }
    }
    disabled={false}
    key="Laughed-1"
  />
  <DragSource(WithStyles(Component))
    choice={
      Object {
        "label": "Spoon",
        "value": "Spoon",
      }
    }
    disabled={false}
    key="Spoon-2"
  />
</div>
`;

exports[`index Choices renders correctly with disabled prop as true 1`] = `
<div>
  <DragSource(WithStyles(Component))
    choice={
      Object {
        "label": "Jumped",
        "value": "Jumped",
      }
    }
    disabled={true}
    key="Jumped-0"
  />
  <DragSource(WithStyles(Component))
    choice={
      Object {
        "label": "Laughed",
        "value": "Laughed",
      }
    }
    disabled={true}
    key="Laughed-1"
  />
  <DragSource(WithStyles(Component))
    choice={
      Object {
        "label": "Spoon",
        "value": "Spoon",
      }
    }
    disabled={true}
    key="Spoon-2"
  />
</div>
`;
